# user-service-rust

./: .dockerignore  .gitignore  Cargo.toml  Readme.md  ToDo.txt  rustfmt.toml
.cargo/: config.toml
deployment/: Dockerfile  Dockerfile-build  docker-compose.yml
lib-rpc/: user-service.proto
lib-rpc/src/: lib.rs
rpc/: Cargo.toml  build.rs  user-service.proto
rpc/src/: lib.rs
server/: Cargo.toml  diesel.toml
server/migrations/2024-07-27-190938_create_users/: up.sql
server/migrations/2024-07-29-110415_change_naming/: down.sql  up.sql
server/src/: config.rs  errors.rs  internal_repo.rs  macros.rs  main.rs  schema.rs  types.rs
server/src/adapters/: mod.rs  postgres.rs  schema.rs
server/src/adapters/database/: mod.rs  schema.rs
server/src/adapters/repo/: mod.rs
server/src/app/: mod.rs  services.rs  structs.rs  tests.rs  user_server_core.rs  user_service.rs  user_service_test.rs  validation.rs
server/src/app/user_service/: core.rs  mod.rs  tests.rs
server/src/repo/: database.rs  internal.rs  mod.rs
server/src/tests/: db_repository.rs  mod.rs  user_service_core.rs
test_client/: Cargo.toml  Using.md
test_client/src/: main.rs
