[workspace]
resolver = "2"
members = [
    "rpc",
    "server",
    "test_client"

]


[workspace.dependencies]
dotenv = "0.15.0"
lib-rpc = { path = "./rpc" }
tonic = "0.12.1"
tonic-reflection = "0.12.1"
prost = "0.13.1"
prost-types = "0.13.1"
uuid = {version= "1.10.0", features = ["v7"] }
tokio = { version = "1.39.1", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"
clap = { version = "4.5.11", features = ["derive"] }
clap_derive = "4.5.11"
pretty_assertions = "1.4.0"
serial_test = "3.1.1"