[package]
name = "user-service-server"
version = "0.1.0"
edition = "2021"


[dependencies]
#GRPC
user-service-rpc = { workspace = true}
tonic = { workspace = true}
#tonic-reflection = { workspace = true}
prost = { workspace = true}
prost-types = { workspace = true}
dotenv = { workspace = true}
uuid = { workspace = true}
tokio = { workspace = true}
log  = { workspace = true}
chrono = {workspace = true}
#env_logger = { workspace = true}
fern = { version = "0.6.1", features = ["colored"] }
dashmap = "6.0.1"
humantime = "2.1.0"
clap = { version = "4.5.11", features = ["derive"] }
clap_derive = "4.5.11"