[package]
name = "user-service-server"
version = "0.1.0"
edition = "2021"


[dependencies]
#GRPC
lib-rpc = { workspace = true}
tonic = { workspace = true}
prost = { workspace = true}
prost-types = { workspace = true}

#Logger
log  = { workspace = true}
fern = { version = "0.6.2", features = ["colored"] }

dotenv = { workspace = true}
uuid = { workspace = true}

#async runtime
tokio = { workspace = true}

chrono = {workspace = true}
#argparser
clap = { workspace = true}
clap_derive = { workspace = true}

dashmap = "6.0.1"

async-trait = "0.1.81"

diesel = { version = "2.2.2", features = ["postgres", "r2d2", "uuid"] }
diesel_migrations = "2.2.0"

[dev-dependencies]
pretty_assertions = { workspace = true}
serial_test = { workspace = true}