[package]
name = "user-service-test-client"
version = "0.1.0"
edition = "2021"

[dependencies]
#GRPC
user-service-rpc = { workspace = true}
tonic = { workspace = true}
tonic-reflection = { workspace = true}
prost = { workspace = true}
prost-types = { workspace = true}
dotenv = { workspace = true}
uuid = { workspace = true}
tokio = { workspace = true}
clap = { version = "4.5.11", features = ["derive"] }
clap_derive = "4.5.11"